# kornia

./: Cargo.toml  README.md  README_SMOLVLM.md  benchmark.py  download_models.sh  evaluate_platforms.sh  smolvlm_demo.py
.github/workflows/: smolvlm_ci.yml
crates/kornia/: Cargo.toml
crates/kornia-io/: Cargo.toml
crates/kornia-models/src/smolvlm/: benchmark.rs
crates/kornia-tensor/src/: bincode.rs
crates/kornia/src/: lib.rs
examples/: smolvlm_demo.rs  web_api.rs
