[package]
name = "kornia-io"
description = "IO library in Rust"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
kornia-tensor = { workspace = true }
kornia-image = { workspace = true }
log.workspace = true
thiserror.workspace = true
tempfile.workspace = true
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
once_cell = "1.19"

[features]
default = []
video = []
