[package]
name = "kornia"
description = "Computer vision library in Rust"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
kornia-tensor = { workspace = true }
kornia-tensor-ops = { workspace = true }
kornia-icp = { workspace = true }
kornia-image = { workspace = true }
kornia-io = { workspace = true, default-features = false }
kornia-imgproc = { workspace = true }
kornia-3d = { workspace = true }
kornia-linalg = { workspace = true }
kornia-models = { workspace = true }
log.workspace = true

[features]
default = []
test-with-criterion = []
